<resources>
    <string name="app_name">MyFamily</string>
    <string name="sos">SOS</string>
    <string name="guard">GUARD</string>
    <string name="in_case_of_emergency_keep_telling_family_member_to_contact_me">In Case Of Emergency, Keep telling family member to contact me.</string>
    <string name="open_when_you_are_in_a_potentially_dangerous_location">Open when you are in a potentially dangerous location.</string>
    <string name="security">SECURITY</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="nav_guard">Guard</string>
    <string name="my_family">My Family</string>
    <string name="calculate">Calculate</string>
    <string name="open_screen">Open Screen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="anand_jaiswal">Anand Jaiswal</string>
    <string name="_9th_buildind_2nd_floor_maldiv_road_manali_9th_buildind_2nd_floor_9th_buildind_2nd_floor">9th buildind, 2nd floor, maldiv road, manali 9th buildind, 2nd floor 9th buildind, 2nd floor,</string>
    <string name="_16_40">16:40</string>
    <string name="_90">90%</string>
    <string name="wifi">WiFi</string>
    <string name="_223m">223M</string>
    <string name="anand">Anand</string>
    <string name="invite">INVITE</string>
</resources>