<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="18sp"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/txt_security"
        android:text="@string/security"

        />
    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="#EB6599"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        android:id="@+id/pink_card"
        app:cardElevation="16dp"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:layout_constraintTop_toBottomOf="@id/txt_security"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/sos"
        android:id="@+id/txt_sos"
        android:textColor="#FFF"
        android:elevation="16dp"
        app:layout_constraintTop_toTopOf="@+id/pink_card"
        app:layout_constraintStart_toStartOf="@+id/pink_card"
        android:textSize="24sp"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/in_case_of_emergency_keep_telling_family_member_to_contact_me"
        android:id="@+id/sos_msg"
        android:elevation="16dp"
        android:textColor="#fff"
        app:layout_constraintTop_toBottomOf="@+id/txt_sos"
        app:layout_constraintStart_toStartOf="@+id/pink_card"
        app:layout_constraintEnd_toStartOf="@+id/img_sos"
        android:layout_margin="16dp"
        />
    <ImageView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/ic_sos"
        android:elevation="16dp"
        android:id="@+id/img_sos"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="@id/pink_card"
        app:layout_constraintEnd_toEndOf="@id/pink_card"
        app:layout_constraintTop_toTopOf="@id/pink_card"/>
    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="#16E167"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="16dp"
        android:layout_width="match_parent"
        android:id="@+id/green_card"
        android:layout_height="180dp"
        app:layout_constraintTop_toBottomOf="@+id/pink_card"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/guard"
        android:id="@+id/txt_guard"
        android:textColor="#FFF"
        android:elevation="16dp"
        app:layout_constraintTop_toTopOf="@+id/green_card"
        app:layout_constraintStart_toStartOf="@+id/green_card"
        android:textSize="24sp"

        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/open_when_you_are_in_a_potentially_dangerous_location"
        android:id="@+id/guard_msg"
        android:elevation="16dp"
        android:textColor="#fff"
        app:layout_constraintTop_toBottomOf="@+id/txt_guard"
        app:layout_constraintStart_toStartOf="@+id/green_card"
        app:layout_constraintEnd_toStartOf="@+id/img_guard"
        android:layout_margin="16dp"
        />
    <ImageView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/ic_guard"
        android:elevation="16dp"
        android:id="@+id/img_guard"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="@id/green_card"
        app:layout_constraintEnd_toEndOf="@id/green_card"
        app:layout_constraintTop_toTopOf="@id/green_card"/>

</androidx.constraintlayout.widget.ConstraintLayout>